<resources>
    <string name="app_name">Study Planner</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Sign_In">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="do_not_have_an_account_yet">Do not have an account yet?</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Calendar">Calendar</string>
    <string name="Profile">Profile</string>
    <string name="Subjects">Subjects</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="New_class">New class</string>
    <string name="New_task">New task</string>
    <string name="Subject">Subject</string>
    <string name="New_subject">New subject</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="Theory">Theory</string>
    <string name="Practice">Practice</string>
    <string name="Seminar">Seminar</string>
    <string name="Exam">Exam</string>
    <string name="Invalid_class_type">Invalid class type</string>
    <string name="Invalid_start_date">Invalid start date</string>
    <string name="Invalid_end_date">Invalid end date</string>
    <string name="End_time_must_be_later_than_start_time">End time must be later than start time</string>
    <string name="Invalid_date">Invalid date</string>
    <string name="Invalid_task_type">Invalid task type</string>
    <string name="Classes">Classes</string>
    <string name="Tasks">Tasks</string>
    <string name="Sign_Out">Sign Out</string>
</resources>
