<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
                name="viewModel"
                type="dev.sarquella.studyplanner.ui.app.profile.ProfileViewModel"/>

    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/fragment_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsingToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_app_bar_height"
                    app:expandedTitleGravity="center_vertical"
                    app:title="@string/Profile"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.Toolbar
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:padding="@dimen/space_m"
                          android:clipToPadding="false">

                <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_l"
                        app:cardCornerRadius="@dimen/space_xxs">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/space_m">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Email"
                                style="@style/TextTitle"/>

                        <TextView
                                android:id="@+id/tvEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/space_s"
                                android:text="@{viewModel.user.email}"
                                tools:text="email@example.com"/>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/btSignOut"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_m"
                        android:text="@string/Sign_Out"
                        android:onClick="@{() -> viewModel.signOut()}"/>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

